[gd_scene load_steps=37 format=2]

[ext_resource path="res://scripts/Skeleton.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Skeleton/s_skeleton_idle1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Skeleton/s_skeleton_idle2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Skeleton/s_skeleton_idle3.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Skeleton/s_skeleton_attack_two1.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Skeleton/s_skeleton_attack_two2.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Skeleton/s_skeleton_attack_two3.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Skeleton/s_skeleton_attack_two4.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Skeleton/s_skeleton_attack_two5.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Skeleton/s_skeleton_roll1.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Skeleton/s_skeleton_roll2.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Skeleton/s_skeleton_roll3.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Skeleton/s_skeleton_roll4.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Skeleton/s_skeleton_roll5.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Skeleton/s_skeleton_roll6.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Skeleton/s_skeleton_roll7.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Skeleton/s_skeleton_attack_one1.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Skeleton/s_skeleton_attack_one2.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Skeleton/s_skeleton_attack_one3.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Skeleton/s_skeleton_attack_one4.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Skeleton/s_skeleton_attack_one5.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Skeleton/s_skeleton_run1.png" type="Texture" id=22]
[ext_resource path="res://Sprites/Skeleton/s_skeleton_run2.png" type="Texture" id=23]
[ext_resource path="res://Sprites/Skeleton/s_skeleton_run3.png" type="Texture" id=24]
[ext_resource path="res://Sprites/Skeleton/s_skeleton_run4.png" type="Texture" id=25]
[ext_resource path="res://Sprites/Skeleton/s_skeleton_run5.png" type="Texture" id=26]
[ext_resource path="res://Sprites/Skeleton/s_skeleton_run6.png" type="Texture" id=27]
[ext_resource path="res://Sprites/Skeleton/s_skeleton_attack_three1.png" type="Texture" id=28]
[ext_resource path="res://Sprites/Skeleton/s_skeleton_attack_three2.png" type="Texture" id=29]
[ext_resource path="res://Sprites/Skeleton/s_skeleton_attack_three3.png" type="Texture" id=30]
[ext_resource path="res://Sprites/Skeleton/s_skeleton_attack_three4.png" type="Texture" id=31]
[ext_resource path="res://Sprites/Skeleton/s_skeleton_attack_three5.png" type="Texture" id=32]
[ext_resource path="res://Sprites/Skeleton/s_skeleton_attack_three6.png" type="Texture" id=33]
[ext_resource path="res://scripts/Attack.gd" type="Script" id=34]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 7, 15 )

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": false,
"name": "attack_two",
"speed": 8.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": false,
"name": "roll",
"speed": 8.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ) ],
"loop": false,
"name": "attack_one",
"speed": 8.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ) ],
"loop": true,
"name": "run",
"speed": 8.0
}, {
"frames": [ ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ) ],
"loop": false,
"name": "attack_three",
"speed": 8.0
} ]

[node name="Skeleton" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 4
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform" ]
life = 200
speed = 100

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

position = Vector2( 0, -15 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Pivot" type="Position2D" parent="." index="1"]

_sections_unfolded = [ "Transform" ]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Pivot" index="0"]

frames = SubResource( 2 )
animation = "attack_three"
frame = 5
centered = false
offset = Vector2( -24, -48 )
_sections_unfolded = [ "Transform" ]

[node name="Attacks" type="Node2D" parent="Pivot" index="1"]

[node name="AttackOne" type="Area2D" parent="Pivot/Attacks" index="0"]

position = Vector2( 24, -17 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 8
collision_mask = 3
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 34 )
_sections_unfolded = [ "Collision", "Transform" ]
strength = 10

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Pivot/Attacks/AttackOne" index="0"]

build_mode = 0
polygon = PoolVector2Array( -16, -11, -6, -9, 4, -5, 15, 2, 16, 4, 16, 7, 10, 10, 1, 10, -11, 7, -16, 5 )

[node name="AttackTwo" type="Area2D" parent="Pivot/Attacks" index="1"]

position = Vector2( 30, -20 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 8
collision_mask = 3
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 34 )
_sections_unfolded = [ "Collision", "Transform" ]
strength = 15

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Pivot/Attacks/AttackTwo" index="0"]

build_mode = 0
polygon = PoolVector2Array( -36, -12, -27, -15, -10, -15, 2, -11, 10, -7, 15, -2, 17, 1, 19, 6, 21, 11, 21, 14, 18, 15, 8, 15, 3, 14, 3, 11, 6, 7, 2, -1, -3, -5, -11, -9, -20, -11, -36, -11 )

[node name="AttackThree" type="Area2D" parent="Pivot/Attacks" index="2"]

position = Vector2( 39, -15 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 8
collision_mask = 3
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 34 )
_sections_unfolded = [ "Collision", "Transform" ]
strength = 20

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Pivot/Attacks/AttackThree" index="0"]

build_mode = 0
polygon = PoolVector2Array( -27, 0, -25, -1, 26, -1, 28, 1, 23, 2, 10, 3, -10, 3, -27, 1 )

[connection signal="animation_finished" from="Pivot/AnimatedSprite" to="." method="on_animation_finished"]


